--- a/css/style.css
+++ b/css/style.css
@@ -164,8 +164,8 @@ a {
   padding: 12px 30px;
   border-radius: 30px;
   color: #ffffff;
-  background: #2f2f2f;
-  border-color: #2f2f2f; }
+  background: #ffffff;
+  border-color: #ffffff; }
   .btn:hover {
     color: #ffffff;
     background: #222222;
