--- a/css/style.css
+++ b/css/style.css
@@ -1085,7 +1085,7 @@ h2 {
 
 .section_0 {
   background-blend-mode: luminosity;
-  background-image: url(https://static.hbo.com/2024-05/house-of-the-dragon-s2-ka-1920.jpg) !important;
+  background-image: url("../images/About_us.jpg") !important;
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #333f48 !important;
@@ -1110,6 +1110,26 @@ h2 {
   margin-top: -30px;
   z-index: 15;
 }
+
+.section_2 {
+  background-blend-mode: luminosity;
+  background-image: url("../images/Service.JPG") !important;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #333f48 !important;
+  height: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-end;
+  padding: 48px 0;
+  position: relative;
+  background-position: 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
+
 .section_1_textbox {
   color: white;
   font-style: italic;
