staggered text animation 9/9/24

--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,17 @@ a.more {
   border-color: #02457a;
 }
 
+.animate-text {
+  display: inline-block;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s, transform 0.5s;
+}
+.animate-text.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 .btn:active,
 .btn:focus {
   outline: none !important;
